# platform.core.appfw.pkgmgr-tool

./: CMakeLists.txt
data/: 10_package-manager-add.post  pkgmgr-create-delta.sh.in  pkgmgr-unzip-pkg.sh.in  pkgmgr-unzip-tpk.sh.in  usage_guide_for_create_delta_package.txt
packaging/: pkgmgr-tool.manifest  pkgmgr-tool.spec
src/: delta.c  delta.h  install_preload_tpk.c  pkg_clearcache.c  pkg_cmd.c  pkg_getsize.c  pkg_info.c  pkg_initdb.c  pkg_privilege.c  pkg_rsc_slice.c
